src/objects/Integration_Log__c.object
<CustomObject>
    <description>Used to log errors from integration</description>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Endpoint of the external system/application</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message from the webservice callout</description>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <description>Will hold description of the type of integration job</description>
        <label>Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>Salesforce Id of the record for which the integration failed</description>
        <label>Related Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <description>Body of the callout request</description>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Header__c</fullName>
        <description>Request header from the callout</description>
        <label>Request Header</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <description>Body of the response received/sent to/from external system/application</description>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <description>Code returned OR sent to the external system/application after processing request</description>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the callout was successful or not</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Job__c</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Success__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Failure_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Message__c</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job__c</field>
            <operation>equals</operation>
            <value>UpsertRecordQueueable</value>
        </filters>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Failure Logs</label>
    </listViews>
    <listViews>
        <fullName>Last_7_days</fullName>
        <columns>NAME</columns>
        <columns>Job__c</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Code__c</columns>
        <columns>Success__c</columns>
        <columns>Endpoint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 days</label>
    </listViews>
    <listViews>
        <fullName>NS_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Endpoint__c</columns>
        <columns>Error_Message__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Endpoint__c</field>
            <operation>contains</operation>
            <value>https://4081061.suitetalk.api.netsuite.com</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>NS Logs</label>
    </listViews>
    <listViews>
        <fullName>Successful_Logs</fullName>
        <columns>NAME</columns>
        <columns>Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Successful Logs</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>